# automata_theory

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.h  README.md  generator.cpp  main.cpp
Generator/: CMakeLists.txt  Generator.cpp  Generator.h  main.cpp
Implimentations/: debug.txt
Implimentations/Recognizer/: CMakeLists.txt  Recognizer.cpp  Recognizer.h
Implimentations/flex/: CMakeLists.txt  FlexRecognizer.cpp  FlexRecognizer.h  Makefile  kuku.txt  lex.yy.c  lex.yy.cc  main  rules.l
Implimentations/regex/: CMakeLists.txt  Makefile  RegexRecognizer.h  advanced_regexp.txt  kuku.txt  main  main.cpp
Implimentations/smc/: Makefile  SmcRecognizer.cpp  SmcRecognizer.h  Translator.cpp  Translator.h  automat.sm  automat_sm.cpp  automat_sm.h  file_f.txt  hype.txt  kuku.txt  main  main.cpp
Recognizer/: Recognizer.h
Tester/: CMakeLists.txt  Tester.cpp  Tester.h  incorrect_cases.txt
lab1/: CMakeLists.txt  Translator.cpp  Translator.h  automat.sm  automat_sm.cpp  automat_sm.h  input.txt  main  main.cpp
lab1/Generator/: CMakeLists.txt  Generator.cpp  Generator.h  Makefile  gen  main.cpp
lab1/Implimentations/: CMakeLists.txt  input.txt  main.cpp
lab1/Implimentations/Recognizer/: CMakeLists.txt  Recognizer.cpp  Recognizer.h
lab1/Implimentations/flex/: CMakeLists.txt  FlexRecognizer.h  ImpRecognizer.cpp  ImpRecognizer.h  kuku.txt  lex.yy.cc  rules.l
lab1/Implimentations/regex/: CMakeLists.txt  ImpRecognizer.cpp  ImpRecognizer.h  RegexRecognizer.cpp  RegexRecognizer.h
lab1/Implimentations/smc/: CMakeLists.txt  ImpRecognizer.cpp  ImpRecognizer.h  SmcRecognizer.h  automat.sm  automat_sm.cpp  automat_sm.h  main
lab1/Tester/: CMakeLists.txt  Tester.cpp  Tester.h  time.cpp
lab1/flex/: CMakeLists.txt  Makefile  lex.yy.c  main  rules.l  rules_no_out.l
lab1/regex/: CMakeLists.txt  Makefile  main  main.cpp  regexp.txt
lab1/smc/: 1  CMakeLists.txt  Translator.cpp  Translator.h  automat.sm  automat_sm.cpp  gen_sm.sh  main  main.cpp
lab2/: AST.h  Automat.h  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt~RF5ce45b7.TMP  Regex.cpp  Regex.h  State.h  genPng.sh  line.txt  main.cpp  regex.h  regex_exp.txt  viz.py
lab2/AST/: AST.cpp  AST.h  CMakeLists.txt
lab2/Automat/: Automat.cpp  Automat.h  CMakeLists.txt
lab2/NFA/: CMakeLists.txt  NFA.cpp  NFA.h
lab2/Regex/: CMakeLists.txt  Regex.cpp  Regex.h
lab2/State/: CMakeLists.txt  State.cpp  State.h
lab2/StateSet/: CMakeLists.txt  StateSet.cpp  StateSet.h
lab2/Transition/: CMakeLists.txt  Transition.cpp  Transition.h
lab2/TreeLib/: BinTree.c  BinTree.h
lab2/scripts/: genPng.sh  viz.py
lab3/: Makefile  a_star.boba  binary_number.boba  bis.output  bis.tab.c  bis.tab.h  code.boba  compile_vars.h  debug.boba  exp1.boba  exp2.boba  exp3.boba  exp4.boba  factorial_beta.boba  fb_compile.sh  fibonnachi.boba  geometric_progression.boba  labirint.txt  labirint2.txt  labirint3.txt  labirint4.txt  lang.ll  lang.yy  lex.yy.c  logger.h  main.c  main.cpp  number_reverse.boba  path_finding.boba  power_of_ten.boba  prog  recognizer.l  recursive_power.boba  report_bison.txt  report_flex.txt  simple_loop.boba  test  test.cpp
lab3/Ast/: Ast.cpp  Ast.h
lab3/Robo/: Map.cpp  Map.h  Robo.cpp  Robo.h
lab3/VarMap/: VarMap.cpp  VarMap.h
lab3/bison/: bis.output  bis.tab.c  bis.tab.h  lang.y
lab3/flex/: lex.yy.c  recognizer.l
lab3/testing/: Makefile  buffer.boba  report_bison.txt  report_flex.txt  testing.cpp
stupid_greetings_grammar/: bis.output  bis.tab.c  bis.tab.h  lang.yy  lex.yy.c  main.c  prog
stupid_greetings_grammar/cpp/: Interpreter.cpp  Interpreter.h  Makefile  Scanner.h  hype.tab.cc  hype.tab.hh  hype.yy  main.cpp  recognizer_hype.ll
turnstile_v1/: CMakeLists.txt  toilet.cpp  turnstile.cpp  turnstile.h
turnstile_v2/: CMakeLists.txt  Locked.h  State.cpp  Unlocked.cpp  Unlocked.h  main.cpp  turnstile.h
turnstile_v2/Locked/: CMakeLists.txt  Locked.cpp  Locked.h
turnstile_v2/State/: CMakeLists.txt  State.cpp  State.h
turnstile_v2/Turnstile/: CMakeLists.txt  turnstile.cpp  turnstile.h
turnstile_v2/Unlocked/: CMakeLists.txt  Unlocked.h
turnstile_v3/: CMakeLists.txt  main.cpp  turnstile.sm  turnstile_sm.cpp  turnstile_sm.h
turnstile_v3/Turnstile/: CMakeLists.txt  Turnstile.cpp  Turnstile.h
