add_subdirectory(Recognizer)

set(IMP "regex" CACHE STRING "")
set(DEBUG_FLAG "" CACHE STRING "")

if(IMP STREQUAL "flex")
	add_subdirectory(flex)
	add_compile_definitions(FLEX)
elseif(IMP STREQUAL "smc")
	add_subdirectory(smc)
	add_compile_definitions(SMC)
elseif(IMP STREQUAL "regex")
	add_subdirectory(regex)
	add_compile_definitions(REGEX)
elseif(IMP STREQUAL "timing")
	add_subdirectory(regex)
	add_subdirectory(flex)
	add_subdirectory(smc)
endif()

if(DEBUG_FLAG STREQUAL "1")
	add_compile_definitions(DEBUG_INFO)
endif()

if(NOT IMP STREQUAL "timing")
	add_executable(main_recompile main.cpp ${IMP}/ImpRecognizer.cpp)
	target_link_libraries(main_recompile ${IMP}_recognizer recognizer)
endif()
